--- a/cs-law-spa-pwa/package.json
+++ b/cs-law-spa-pwa/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-calendly": "^4.3.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.4",
     "react-icons": "^5.0.1",
     "vite-plugin-pwa": "^0.19.2"
   },
